NXP-33330: cleanup / format